maybe fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -128,15 +128,15 @@ margin-bottom: 2%;
   align-items: center;
 }
 
-.bottom-container a:nth-child(2){
+/* .bottom-container a:nth-child(2){
   padding-left: 10px;
-}
+} */
 
 .bottom-container img {
   height: 20px;
   width: 100%;
   display: inline-block;
-  padding: 0px 10px;
+  padding: 0px 5px;
   filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
   z-index: -1;
 }
